# docanvil

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  VERSIONING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feauture_proposal.yml  plugin_proposal.yml
.github/workflows/: ci.yml  publish-pages.yml  release.yml  tag-release.yml
docs/: docanvil.toml  nav.toml
docs/docs/: index.fr.md  index.md
docs/docs/api/: authentication.md  endpoints.md  overview.md
docs/docs/deployment/: bitbucket-pipelines.fr.md  bitbucket-pipelines.md
docs/docs/development/: readiness.md  roadmap.fr.md  roadmap.md
docs/docs/guides/: configuration.fr.md  configuration.md  getting-started.fr.md  getting-started.md  localisation.fr.md  localisation.md  migration.fr.md  migration.md  pdf-export.fr.md  pdf-export.md  theming.fr.md  theming.md  versioning.fr.md  versioning.md
docs/docs/reference/: cli.fr.md  cli.md  components.md  css-variables.fr.md  css-variables.md  markdown.md  project-structure.fr.md  project-structure.md
docs/docs/writing/: components.fr.md  components.md  front-matter.fr.md  front-matter.md  markdown.fr.md  markdown.md  wiki-links.fr.md  wiki-links.md
docs/theme/: custom.css
src/: config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  nav.rs  project.rs  search.rs  seo.rs  util.rs
src/cli/: build.rs  color.rs  doctor.rs  init.rs  mod.rs  new.rs  serve.rs  theme.rs
src/cli/export/: cdp.rs  mod.rs  pdf.rs
src/components/: mod.rs
src/components/builtin/: code_group.rs  lozenge.rs  mermaid.rs  mod.rs  note.rs  tabs.rs  warning.rs
src/doctor/: mod.rs
src/doctor/checks/: config.rs  content.rs  locale.rs  mod.rs  output.rs  project.rs  readability.rs  theme.rs  version.rs
src/pipeline/: attributes.rs  directives.rs  frontmatter.rs  headings.rs  images.rs  markdown.rs  mod.rs  popovers.rs  syntax.rs  wikilinks.rs
src/render/: assets.rs  mod.rs  templates.rs
src/server/: mod.rs  watcher.rs  websocket.rs
src/theme/: mod.rs  starter_custom.css
src/theme/default/: docanvil.js  layout.html  pdf.html  style.css
tests/: build_integration.rs  cli_integration.rs  integration_helpers.rs
