[package]
name = "docanvil"
version = "0.1.7"
edition = "2024"
description = "A Rust-based static documentation generator that converts Markdown into HTML sites"
license = "MIT"

[[bin]]
name = "docanvil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = "0.50.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.1"
thiserror = "2"
walkdir = "2"
slug = "0.1"
regex = "1"
tera = "1"
rust-embed = "8"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
notify = "8"
notify-debouncer-mini = "0.7"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
